--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <html>
-
 <head>
-	<script src="script.html"></script>
-	<!-- <link rel="me.html" type="index.html" href="index.html"> -->
+ <center><a>Welcome to every one </a>
 </head>
-
 <body>
+<h1><b><u>app</u></b><h1>
+ <h2>good</h2>
 	<h1>Hello is there!</h1>
-	<a href="/https://www.youtube.com/watch?v=_UWrpL3cjFo">My other page</a>
 </body>
-
 </html>
