--- a/me.html
+++ b/me.html
@@ -1,8 +1,11 @@
 <html>
   <head>
+    <title>
+       <h1>Welcome to every one</h1>
+   <h2> hi</h2>
+    </title>
    </head>
-  <body>
-    <h1>oh whaaa!</h1>
-    <a href="/https://www.youtube.com/watch?v=_UWrpL3cjFo">My other page</a>
-  </body>
+   <body>
+     hai 
+   </body>
 </html>
